--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body{
     background-color: rgba(168, 168, 168, 0.349);
     opacity: 1;
     padding: 2%;
-   position: absolute;
+   position: relative;
    bottom: 1%;
    margin-left: 50%;
    
@@ -33,6 +33,8 @@ body{
 
 .boxMessage {
     margin-left: 5%;
+    position: absolute;
+    bottom: 5%;
 }
 
 .imgDiv >img {
